variables.Variables.scala.error
Compilation error:
Variables:5: error: value + is not a member of Null
  stepamount=stepamount+1
                       ^Variables:9: error: value + is not a member of Null
  donesteps= donesteps+1
                      ^