variables.Variables.scala.code
var stepamount= null
var donesteps=null
while (!isOverBaggle){
  forward()
  stepamount=stepamount+1
}
isCarryingBaggle
while (stepamount != donesteps){
  donesteps= donesteps+1
  backward()
}